kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/team-b/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
  labels:
    tenant: team-b
    pod-security.kubernetes.io/enforce: baseline
