kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/team-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-b-demo
  namespace: team-b
spec:
  selector:
    app: team-b-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
